--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -44,6 +44,8 @@
     "sceneNamingRoom": "Формат тега <pre>сцен.<б>&lt;имя-из-группы&ГТ;</б>.<б>&lt;имя-из-сцена&ГТ;</б>.имя и</pre>",
     "sceneNamingScene": "Формат тега <pre>сцен.<б>&lt;имя-из-сцена&ГТ;</б>.<б>&lt;имя-из-группы&ГТ;</б>.имя и</pre>",
     "secureConnection": "Используйте безопасное соединение с мостом (https)",
+    "switchOnlyWhenOn": "Только установить фонари группы, которые находятся на",
+    "switchOnlyWhenOnInfo": "Эта опция устанавливает фонари в группу, которая уже на.",
     "sync": "Настройки Синхронизации ",
     "syncConfig": "Синхронизировать Конфиг",
     "syncGroups": "Синхронизация Групп",
